[CHORE] DormitoryManagement 컨트롤러, 스웨거 분리